syntax = "proto3";

package task.v1;

import "google/api/annotations.proto";

option go_package = "github.com/St1cky1/task-service/proto/pb";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (TaskResponse) {
    option (google.api.http) = {
      post: "/api/v1/tasks"
      body: "*"
    };
  }
  
  rpc GetTask(GetTaskRequest) returns (TaskResponse) {
    option (google.api.http) = {
      get: "/api/v1/tasks/{id}"
    };
  }
  
  rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse) {
    option (google.api.http) = {
      put: "/api/v1/tasks/{id}"
      body: "*"
    };
  }
  
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {
    option (google.api.http) = {
      delete: "/api/v1/tasks/{id}"
    };
  }
  
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {
    option (google.api.http) = {
      get: "/api/v1/tasks"
    };
  }
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string status = 3;
  int32 owner_id = 4;
}

message GetTaskRequest {
  int32 id = 1;
}

message UpdateTaskRequest {
  int32 id = 1;
  string title = 2;
  optional string description = 3;
  string status = 4;
}

message DeleteTaskRequest {
  int32 id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}

message ListTasksRequest {
  string status = 1;
}

message ListTasksResponse {
  repeated TaskResponse tasks = 1;
}

message TaskResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  int32 owner_id = 5;
  string created_at = 6;
  string updated_at = 7;
}