syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";

option go_package = "github.com/St1cky1/task-service/proto/pb";

service UserService {
  // Auth endpoints
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/register"
      body: "*"
    };
  }
  
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };
  }
  
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/refresh"
      body: "*"
    };
  }
  
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/logout"
      body: "*"
    };
  }

  // User endpoints
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }
  
  rpc GetUser(GetUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/{id}"
    };
  }
  
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      put: "/api/v1/users/{id}"
      body: "*"
    };
  }
  
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/api/v1/users/{id}"
    };
  }
  
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/api/v1/users"
    };
  }
  
  rpc UploadAvatar(stream UploadAvatarRequest) returns (UploadAvatarResponse);
  
  rpc DownloadAvatar(DownloadAvatarRequest) returns (stream DownloadAvatarResponse);
}

// User messages
message CreateUserRequest {
  string name = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
  int32 total = 2;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string avatar_url = 4;
  bool is_active = 5;
  string last_login = 6;
  string created_at = 7;
  string updated_at = 8;
}

// Auth messages
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  UserResponse user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message RegisterResponse {
  UserResponse user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutRequest {
  int32 user_id = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message UploadAvatarRequest {
  int32 user_id = 1;
  bytes data = 2;
  string content_type = 3;
}

message UploadAvatarResponse {
  bool success = 1;
  string message = 2;
  string avatar_url = 3;
}

message DownloadAvatarRequest {
  int32 user_id = 1;
}

message DownloadAvatarResponse {
  bytes data = 1;
  string content_type = 2;
}