package main

import (
	"context"
	"fmt"
	"log"
	"net/http"
	"os"
	"os/signal"
	"sync"
	"syscall"
	"time"

	grpcapi "github.com/St1cky1/task-service/internal/api/grpc"
	"github.com/St1cky1/task-service/internal/entity"
	"github.com/St1cky1/task-service/internal/infrastructure/auth"
	"github.com/St1cky1/task-service/internal/infrastructure/client"
	"github.com/St1cky1/task-service/internal/infrastructure/worker"
	"github.com/St1cky1/task-service/internal/repository"
	"github.com/St1cky1/task-service/internal/usecase"
	"github.com/golang-migrate/migrate/v4"
	_ "github.com/golang-migrate/migrate/v4/database/postgres"
	_ "github.com/golang-migrate/migrate/v4/source/file"
	"github.com/jackc/pgx/v5/pgxpool"
)

func main() {
	var wg sync.WaitGroup

	dbURL := fmt.Sprintf("postgresql://%s:%s@%s:%s/%s?sslmode=disable",
		os.Getenv("DB_USER"),
		os.Getenv("DB_PASSWORD"),
		os.Getenv("DB_HOST"),
		os.Getenv("DB_PORT"),
		os.Getenv("DB_NAME"))

	rabbitMQURL := fmt.Sprintf("amqp://%s:%s@%s:%s/",
		os.Getenv("RABBITMQ_USER"),
		os.Getenv("RABBITMQ_PASSWORD"),
		os.Getenv("RABBITMQ_HOST"),
		os.Getenv("RABBITMQ_PORT"))
	// –ó–∞–ø—É—Å–∫–∞–µ–º –º–∏–≥—Ä–∞—Ü–∏–∏
	if err := runMigrations(dbURL); err != nil {
		log.Fatal("‚ùå –û—à–∏–±–∫–∞ –º–∏–≥—Ä–∞—Ü–∏–π:", err)
	}

	// –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ –ë–î
	db, err := pgxpool.New(context.Background(), dbURL)
	if err != nil {
		log.Fatal("‚ùå –û—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ –ë–î:", err)
	}
	defer db.Close()

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å –ë–î
	if err := db.Ping(context.Background()); err != nil {
		log.Fatal("‚ùå –ù–µ —É–¥–∞–ª–æ—Å—å –ø–æ–¥–∫–ª—é—á–∏—Ç—å—Å—è –∫ –ë–î:", err)
	}
	fmt.Println("‚úÖ –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ –ë–î —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–æ")

	// –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ RabbitMQ
	rabbitMQ, err := client.NewRabbitMQClient(rabbitMQURL)
	if err != nil {
		log.Fatal("‚ùå –û—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ RabbitMQ:", err)
	}
	defer rabbitMQ.Close()
	fmt.Println("‚úÖ –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ RabbitMQ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–æ")

	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º —Ä–µ–ø–æ–∑–∏—Ç–æ—Ä–∏–∏
	userRepo := repository.NewUserRepository(db)
	taskRepo := repository.NewTaskRepository(db)
	taskAuditRepo := repository.NewTaskAuditRepository(db)
	avatarRepo := repository.NewAvatarRepository(db)
	refreshTokenRepo := repository.NewRefreshTokenRepository(db)

	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º auth –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã
	passwordManager := auth.NewPasswordManager()
	jwtManager := auth.NewJWTManager()

	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º —Å–µ—Ä–≤–∏—Å—ã
	taskService := usecase.NewTaskService(taskRepo, userRepo, taskAuditRepo, rabbitMQ)
	userService := usecase.NewUserService(userRepo, avatarRepo, passwordManager, jwtManager, refreshTokenRepo)
	authService := usecase.NewAuthService(userRepo, refreshTokenRepo, passwordManager, jwtManager)

	// –ó–∞–ø—É—Å–∫–∞–µ–º –≤–æ—Ä–∫–µ—Ä –¥–ª—è –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∞—É–¥–∏—Ç-—Å–æ–æ–±—â–µ–Ω–∏–π
	auditWorker := worker.NewAuditWorker(rabbitMQ, taskAuditRepo)
	workerCtx, workerCancel := context.WithCancel(context.Background())
	defer workerCancel()

	wg.Add(1)
	go func() {
		defer wg.Done()
		fmt.Println("–ó–∞–ø—É—Å–∫ Audit Worker...")
		auditWorker.Start(workerCtx)
	}()

	// –ó–∞–ø—É—Å–∫–∞–µ–º –Ω–µ–ø—Ä–µ—Ä—ã–≤–Ω—É—é –≥–µ–Ω–µ—Ä–∞—Ü–∏—é –∑–∞–¥–∞—á
	taskGenCtx, taskGenCancel := context.WithCancel(context.Background())
	defer taskGenCancel()
	wg.Add(1)
	go func() {
		defer wg.Done()
		continuousTaskGeneration(taskGenCtx, taskService, userRepo)
	}()

	// –ó–∞–ø—É—Å–∫–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä —Å–æ –≤—Å–µ–º–∏ —Å–µ—Ä–≤–∏—Å–∞–º–∏ (Task, User, Auth)
	grpcServer := grpcapi.NewGRPCServer(taskService, userService, authService)
	wg.Add(1)
	go func() {
		defer wg.Done()
		fmt.Println("–ó–∞–ø—É—Å–∫ gRPC —Å–µ—Ä–≤–µ—Ä–∞ –Ω–∞ –ø–æ—Ä—Ç—É 9090...")
		fmt.Println("üìã TaskService, UserService –∏ AuthService –≥–æ—Ç–æ–≤—ã –∫ —Ä–∞–±–æ—Ç–µ!")
		if err := grpcServer.Start("9090"); err != nil {
			log.Printf("‚ùå gRPC server error: %v", err)
		}
	}()

	// –ó–∞–ø—É—Å–∫–∞–µ–º gRPC Gateway (HTTP->gRPC —Ç—Ä–∞–Ω—Å–ª—è—Ü–∏—è)
	wg.Add(1)
	go func() {
		defer wg.Done()
		fmt.Println("–ó–∞–ø—É—Å–∫ gRPC Gateway –Ω–∞ –ø–æ—Ä—Ç—É 8080...")
		if err := grpcServer.StartGateway(context.Background(), "9090", "8080"); err != nil && err != http.ErrServerClosed {
			log.Printf("‚ùå gRPC Gateway error: %v", err)
		}
	}()

	// –ó–∞–ø—É—Å–∫–∞–µ–º –Ω–µ–ø—Ä–µ—Ä—ã–≤–Ω—É—é –≥–µ–Ω–µ—Ä–∞—Ü–∏—é –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π —Å –∞–≤–∞—Ç–∞—Ä–∫–∞–º–∏
	userGenCtx, userGenCancel := context.WithCancel(context.Background())
	defer userGenCancel()
	wg.Add(1)
	go func() {
		defer wg.Done()
		// –î–∞–µ–º —Å–µ—Ä–≤–µ—Ä—É –≤—Ä–µ–º—è –Ω–∞ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—é
		time.Sleep(2 * time.Second)
		fmt.Println("\nüë• –ù–∞—á–∏–Ω–∞–µ–º –≥–µ–Ω–µ—Ä–∞—Ü–∏—é –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π —Å –∞–≤–∞—Ç–∞—Ä–∫–∞–º–∏...")
		if err := usecase.ContinuousUserGenerationWithAvatars(userGenCtx, userService); err != nil {
			log.Printf("‚ö†Ô∏è  –û—à–∏–±–∫–∞ –ø—Ä–∏ –≥–µ–Ω–µ—Ä–∞—Ü–∏–∏ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π: %v", err)
		}
	}()

	fmt.Println("RabbitMQ Management: http://localhost:15672")
	fmt.Println("gRPC —Å–µ—Ä–≤–µ—Ä: localhost:9090")
	fmt.Println("Audit Worker –∑–∞–ø—É—â–µ–Ω –∏ –æ–∂–∏–¥–∞–µ—Ç —Å–æ–æ–±—â–µ–Ω–∏—è...")
	fmt.Println("–ù–µ–ø—Ä–µ—Ä—ã–≤–Ω–∞—è –≥–µ–Ω–µ—Ä–∞—Ü–∏—è –∑–∞–¥–∞—á –∑–∞–ø—É—â–µ–Ω–∞...")
	fmt.Println("–ì–µ–Ω–µ—Ä–∞—Ü–∏—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π —Å –∞–≤–∞—Ç–∞—Ä–∫–∞–º–∏ –∑–∞–ø—É—â–µ–Ω–∞...")
	fmt.Println("–î–ª—è –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ –Ω–∞–∂–º–∏—Ç–µ Ctrl+C")

	// –ñ–¥–µ–º —Å–∏–≥–Ω–∞–ª –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è
	waitForShutdown(workerCancel, taskGenCancel, userGenCancel)
}

// –ù–µ–ø—Ä–µ—Ä—ã–≤–Ω–∞—è –≥–µ–Ω–µ—Ä–∞—Ü–∏—è –∑–∞–¥–∞—á –¥–ª—è –≤—Å–µ—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π
func continuousTaskGeneration(ctx context.Context, taskService *usecase.TaskService, userRepo repository.IUserRepository) {
	taskCounter := 0
	statuses := []entity.TaskStatus{
		entity.StatusPending,
		entity.StatusInProgress,
		entity.StatusCompleted,
		entity.StatusCancelled,
	}

	for {
		select {
		case <-ctx.Done():
			fmt.Println("üõë –ì–µ–Ω–µ—Ä–∞—Ü–∏—è –∑–∞–¥–∞—á –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∞")
			return
		case <-time.After(5 * time.Second): // –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º –∑–∞–¥–∞—á—É –∫–∞–∂–¥—ã–µ 5 —Å–µ–∫—É–Ω–¥
			// –ü–æ–ª—É—á–∞–µ–º –≤—Å–µ—Ö –∞–∫—Ç–∏–≤–Ω—ã—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π
			users, err := userRepo.List(ctx)
			if err != nil {
				log.Printf("‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π: %v", err)
				continue
			}

			if len(users) == 0 {
				log.Println("‚è≥ –ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π –µ—â–µ –Ω–µ—Ç, –æ–∂–∏–¥–∞–µ–º —Å–æ–∑–¥–∞–Ω–∏—è...")
				continue
			}

			taskCounter++

			// –†–∞—Å–ø—Ä–µ–¥–µ–ª—è–µ–º –∑–∞–¥–∞—á–∏ –º–µ–∂–¥—É –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è–º–∏
			userIdx := (taskCounter - 1) % len(users)
			user := users[userIdx]

			// –°–ª—É—á–∞–π–Ω—ã–π —Å—Ç–∞—Ç—É—Å
			status := statuses[taskCounter%len(statuses)]

			// –°–æ–∑–¥–∞–µ–º –∑–∞–¥–∞—á—É
			taskReq := &entity.CreateTaskRequest{
				Title:       fmt.Sprintf("–ê–≤—Ç–æ-–∑–∞–¥–∞—á–∞ #%d", taskCounter),
				Description: fmt.Sprintf("–°–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–∞ –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –≤ %s", time.Now().Format("15:04:05")),
				Status:      status,
				OwnerId:     user.ID,
			}

			task, err := taskService.CreateTask(ctx, taskReq, user.ID)
			if err != nil {
				log.Printf("‚ùå –û—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –∞–≤—Ç–æ-–∑–∞–¥–∞—á–∏ –¥–ª—è user %d: %v", user.ID, err)
				continue
			}

			fmt.Printf("‚úÖ –°–æ–∑–¥–∞–Ω–∞ –∞–≤—Ç–æ-–∑–∞–¥–∞—á–∞: ID=%d, Title=%s, User=%d, Status=%s\n",
				task.ID, task.Title, user.ID, task.Status)

			// –°–ª—É—á–∞–π–Ω–æ –æ–±–Ω–æ–≤–ª—è–µ–º –∏–ª–∏ —É–¥–∞–ª—è–µ–º –∫–∞–∂–¥—É—é 3-—é –∑–∞–¥–∞—á—É
			if taskCounter%3 == 0 {
				// –û–±–Ω–æ–≤–ª—è–µ–º –∑–∞–¥–∞—á—É
				updateReq := entity.UpdateTaskRequest{
					Title:  fmt.Sprintf("–æ–±–Ω–æ–≤–ª–µ–Ω–Ω–∞—è –∑–∞–¥–∞—á–∞ #%d", taskCounter),
					Status: entity.StatusCompleted,
				}

				updatedTask, err := taskService.UpdateTask(ctx, task.ID, user.ID, &updateReq)
				if err != nil {
					log.Printf("‚ùå –û—à–∏–±–∫–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –∞–≤—Ç–æ-–∑–∞–¥–∞—á–∏: %v", err)
				} else {
					fmt.Printf("üìù –û–±–Ω–æ–≤–ª–µ–Ω–∞ –∞–≤—Ç–æ-–∑–∞–¥–∞—á–∞: %s (%s)\n", updatedTask.Title, updatedTask.Status)
				}
			}

			// –£–¥–∞–ª—è–µ–º –∫–∞–∂–¥—É—é 5-—é –∑–∞–¥–∞—á—É
			if taskCounter%5 == 0 {
				err = taskService.DeleteTask(ctx, task.ID, user.ID)
				if err != nil {
					log.Printf("‚ùå –û—à–∏–±–∫–∞ —É–¥–∞–ª–µ–Ω–∏—è –∞–≤—Ç–æ-–∑–∞–¥–∞—á–∏: %v", err)
				} else {
					fmt.Printf("üóëÔ∏è  –£–¥–∞–ª–µ–Ω–∞ –∞–≤—Ç–æ-–∑–∞–¥–∞—á–∞: ID=%d\n", task.ID)
				}
			}

			// –ü–æ–∫–∞–∑—ã–≤–∞–µ–º —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É –∫–∞–∂–¥—ã–µ 10 –∑–∞–¥–∞—á
			if taskCounter%10 == 0 {
				totalTasks := 0
				for _, u := range users {
					tasks, err := taskService.ListTasks(ctx, u.ID, "")
					if err == nil {
						totalTasks += len(tasks)
					}
				}
				fmt.Printf("üìä –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞: —Å–æ–∑–¥–∞–Ω–æ %d –∑–∞–¥–∞—á, –∞–∫—Ç–∏–≤–Ω—ã—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π: %d, –≤—Å–µ–≥–æ –∑–∞–¥–∞—á –≤ –ë–î: %d\n",
					taskCounter, len(users), totalTasks)
			}
		}
	}
}

func waitForShutdown(workerCancel, taskGenCancel, userGenCancel context.CancelFunc) {
	sigChan := make(chan os.Signal, 1)
	signal.Notify(sigChan, syscall.SIGINT, syscall.SIGTERM)

	fmt.Println("–û–∂–∏–¥–∞–µ–º —Å–∏–≥–Ω–∞–ª –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è (Ctrl+C)...")
	<-sigChan

	fmt.Println("–ó–∞–≤–µ—Ä—à–µ–Ω–∏–µ —Ä–∞–±–æ—Ç—ã...")

	// –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –≤–æ—Ä–∫–µ—Ä –∏ –≥–µ–Ω–µ—Ä–∞—Ç–æ—Ä—ã
	workerCancel()
	taskGenCancel()
	userGenCancel()

	// –î–∞–µ–º –≤—Ä–µ–º—è –¥–ª—è graceful shutdown
	time.Sleep(2 * time.Second)
	fmt.Println("‚úÖ –ü—Ä–∏–ª–æ–∂–µ–Ω–∏–µ –∑–∞–≤–µ—Ä—à–µ–Ω–æ –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ")
}

func runMigrations(dbURL string) error {
	m, err := migrate.New("file://migrations", dbURL)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –º–∏–≥—Ä–∞—Ç–æ—Ä–∞: %w", err)
	}
	defer m.Close()

	if err := m.Up(); err != nil && err != migrate.ErrNoChange {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –≤—ã–ø–æ–ª–Ω–µ–Ω–∏—è –º–∏–≥—Ä–∞—Ü–∏–π: %w", err)
	}

	fmt.Println("‚úÖ –ú–∏–≥—Ä–∞—Ü–∏–∏ –≤—ã–ø–æ–ª–Ω–µ–Ω—ã —É—Å–ø–µ—à–Ω–æ")
	return nil
}
